lib/tests/fixtures/compiler/evaluation/new_invalid_float.pp
notice Float[0.0, 10.0]('-0x10')
